#3 fixing search field weirdness on firefox

--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,7 @@ input {
 	border-radius: 15px;
 	height: 30px;
 	font-family: Delius, sans-serif;
-	width: 98%;
+	width: 97%;
 	font-size: large;
 	padding-left: 10px;
 	background-color: rgb(240, 240, 240);
@@ -43,6 +43,17 @@ input[type="submit"] {
 	text-align: center;
 	border-radius: 13px;
 	padding: 0px;
+	font-family: sans-serif;
+}
+
+input#email_to_search {
+	height: 15px;
+	border: 1px solid grey;
+	border-radius: 15px;
+	font-family: Delius, sans-serif;
+	font-size: medium;
+	background-color: rgb(240, 240, 240);
+	width: 95%;
 }
 
 input:focus {
@@ -171,12 +182,14 @@ p#about a:hover {
 }
 
 #overlay p {
-	margin: 5px;
+	margin: 3px;
+	padding: 2px;
 	text-align: left;
 	font-size: medium;
 }
 
 #overlay p#close {
+	margin-top: 10px;
 	text-align:right;
 	font-size: smaller;
 }
